fixed product text overlapping on smaller displays

--- a/app/src/app/core/components/header/header.component.css
+++ b/app/src/app/core/components/header/header.component.css
@@ -10,6 +10,7 @@ header {
   flex-direction: row;
   align-items: center;
   width: 90%;
+  flex-wrap: wrap;
 }
 
 .wrapper *:hover {
