--- a/app/src/app/products/components/product/product.component.css
+++ b/app/src/app/products/components/product/product.component.css
@@ -26,7 +26,7 @@
 }
 
 .info-wrapper h1 {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 .price {
